fix: responsive spacing issue by centring hero section and allowing main to fill available space

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,7 +15,6 @@
 
 body {
     line-height: 1.6;
-
     -webkit-font-smoothing: antialiased;
 }
 
@@ -140,8 +139,12 @@ body {
 }
 
 main {
-    flex: 1 1 auto;
-    min-height: 0;
+    /* flex: 1 1 auto; */
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    /* min-height: 0; */
 }
 
 a {
@@ -401,7 +404,6 @@ body.modal-open {
 }
 
 /* -- Difficulty & Category Sections -- */
-
 .difficulty-container {
     display: flex;
     flex-direction: column;
@@ -574,7 +576,6 @@ body.modal-open {
 }
 
 /* -- Game Controls -- */
-
 .game-ctrls, 
 .board-actions {
     display: flex;
@@ -680,7 +681,7 @@ body.modal-open {
     display: none;
 }
 
-/* Media Queries */
+/* -- Media Queries -- */
 @media (min-width: 480px) {
     #hero-section {
         display: flex;
